--- a/Resources/Private/Language/ExampleNewsletter.xlf
+++ b/Resources/Private/Language/ExampleNewsletter.xlf
@@ -3,6 +3,9 @@
     <file source-language="en" datatype="plaintext" original="messages">
         <header/>
         <body>
+            <trans-unit id="backend_layout.example_newsletter">
+                <source>Newsletter (Example)</source>
+            </trans-unit>
             <trans-unit id="backend_layout.column.normal">
                 <source>Normal</source>
             </trans-unit>
